# Source/CodeGen/v1/Rust/VitalServiceApiClient/src/models/ip_interface_properties.rs
@@ -19,17 +19,17 @@ pub struct IpInterfaceProperties {
     pub i_pv6_address: Option<String>,
     #[serde(rename = "dnsSuffix", skip_serializing_if = "Option::is_none")]
     pub dns_suffix: Option<String>,
-    #[serde(rename = "isDnsEnabled")]
-    pub is_dns_enabled: bool,
+    #[serde(rename = "isDnsEnabled", skip_serializing_if = "Option::is_none")]
+    pub is_dns_enabled: Option<bool>,
 }
 
 impl IpInterfaceProperties {
-    pub fn new(is_dns_enabled: bool) -> IpInterfaceProperties {
+    pub fn new() -> IpInterfaceProperties {
         IpInterfaceProperties {
             i_pv4_address: None,
             i_pv6_address: None,
             dns_suffix: None,
-            is_dns_enabled,
+            is_dns_enabled: None,
         }
     }
 }
